<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:text="@string/quantity_tv"
        android:textAllCaps="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="@string/decrement_button" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/quantity_value_default"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="@string/increment_button" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:text="@string/price_tv"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp"
        android:text="@string/price_value_default" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/order_button"
        android:textAllCaps="true"
        android:onClick="submitOrder"/>

</LinearLayout>